# django-interplexer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: ci.yaml
src/interplexer/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/interplexer/migrations/: 0001_initial.py
www/: settings.py  tests.py  urls.py
